--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -17,3 +17,5 @@
 = link_to 'Edit', edit_movie_path(@movie)
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-primary'
 = link_to 'Back to movie list', movies_path
+%br
+= link_to 'Find Movies With Same Director', find_movies_by_director_path(@movie.id)
